<resources>
    <string name="app_name">CoffeeOrdering</string>
    <string name="size">Size</string>
    <string name="milk_type">Milk Type</string>
    <string name="cow">\t Cow</string>
    <string name="soy">\t Soy</string>
    <string name="rice">\t Rice</string>
    <string name="coconut">\t Coconut</string>
    <string name="milk_balance">Milk Balance</string>
    <string name="next">NEXT</string>

    <string name="milk_balance_value">%d%</string>
    <string name="percent">%</string>
    <string name="dollar">$</string>
    <string name="foam">Foam</string>
    <string name="order_summary">Order Summary</string>
    <string name="thanks">Thanks for your order!</string>
    <string name="total">Total:</string>
    <string name="order_again">Order again?</string>
    <string name="your_order">Your order will be ready in \n 5 minutes</string>
    <string name="xl">XL</string>
    <string name="l">L</string>
    <string name="m">M</string>
    <string name="s">S</string>
</resources>
