<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorPrimary"
    tools:context="com.truekenyan.coffeeordering.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:id="@+id/top_panel"
        android:background="@color/colorPrimary">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/golden_text"
            android:layout_gravity="bottom"
            android:paddingStart="25dp"
            android:paddingBottom="25dp"
            android:paddingEnd="25dp"
            android:textColor="@color/colorGoldText"
            android:textSize="30sp"
            android:text="@string/size"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:ignore="NestedWeights"
        android:baselineAligned="false"
        android:id="@+id/bottom_panel">
        <LinearLayout
            android:baselineAligned="false"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical"
                android:baselineAligned="false"
                android:id="@+id/coffee_small"
                android:background="@color/coffeeColorOne">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:tint="@color/colorGoldText"
                    android:src="@drawable/espresso_cup_s"
                    android:layout_gravity="center_horizontal"
                    android:contentDescription="@string/app_name"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/s"
                    android:textColor="@color/colorWhiteMilk"
                    android:textSize="30sp"
                    android:textStyle="bold"
                    android:padding="5dp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical"
                android:gravity="center"
                android:id="@+id/coffee_medium"
                android:background="@color/coffeeColorTwo">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:tint="@color/colorGoldText"
                    android:src="@drawable/espresso_cup_l"
                    android:layout_gravity="center_horizontal"
                    android:contentDescription="@string/app_name"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/m"
                    android:textColor="@color/colorWhiteMilk"
                    android:textSize="30sp"
                    android:textStyle="bold"
                    android:padding="5dp"/>
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:baselineAligned="false"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical"
                android:padding="8dp"
                android:gravity="center"
                android:id="@+id/coffee_large"
                android:background="@color/coffeeColorThree">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:tint="@color/colorGoldText"
                    android:src="@drawable/espresso_cup_l"
                    android:layout_gravity="center_horizontal"
                    android:contentDescription="@string/app_name"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/l"
                    android:textColor="@color/colorWhiteMilk"
                    android:textSize="30sp"
                    android:textStyle="bold"
                    android:padding="5dp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical"
                android:gravity="center"
                android:id="@+id/coffee_extra_large"
                android:background="@color/coffeeColorFour">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:tint="@color/colorGoldText"
                    android:src="@drawable/espresso_cup_xl"
                    android:layout_gravity="center_horizontal"
                    android:contentDescription="@string/app_name"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/xl"
                    android:textColor="@color/colorWhiteMilk"
                    android:textSize="30sp"
                    android:textStyle="bold"
                    android:padding="5dp"/>
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>

</LinearLayout>
